                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (29 Jun 2009)
- Markus Koetter made CURLOPT_FTPPORT (and curl's -P/--ftpport) support a port
  range if given colon-separated after the host name/address part. Like
  "192.168.0.1:2000-10000"

- Modified the separators used for CURLOPT_CERTINFO in multi-part outputs. I
  don't know how they got wrong in the first place, but using this output
  format makes it possible to quite easily separate the string into an array
  of multiple items.

Daniel Fandrich (16 June 2009)
- Added a few more compiler warning options for gcc.

Daniel Stenberg (16 Jun 2009)
- Reuven Wachtfogel made curl -o - properly produce a binary output on windows
  (no newline translations). Use -B/--use-ascii if you rather get the ascii
  approach.

Michal Marek (16 Jun 2009)
- When doing non-anonymous ftp via http proxies and the password is not
  provided in the url, add it there (squid needs this).

Daniel Stenberg (15 Jun 2009)
- Eric Wong's patch:

  This allows curl(1) to be used as a client-side tunnel for arbitrary stream
  protocols by abusing chunked transfer encoding in both the HTTP request and
  HTTP response.  This requires server support for sending a response while a
  request is still being read, of course.

  If attempting to read from stdin returns EAGAIN, then we pause our sender.
  This leaves curl to attempt to read from the socket while reading from stdin
  (and thus sending) is paused.

  This change was needed to allow successfully tunneling the git protocol over
  HTTP (--no-buffer is needed, as well).

Patrick Monnerat (15 Jun 2009)
- Replaced use of standard C library rand()/srand() by our own pseudo-random
  number generator.

Yang Tse (11 Jun 2009)